<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Jecelyin Peng <jecelyin@gmail.com>
  ~
  ~ This file is part of 920 Text Editor.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="root_path">Root</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="replace">Replace</string>
    <string name="find">Find</string>
    <string name="new_file">New</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save_all">Save All</string>
    <string name="recent_files">Recent files</string>
    <string name="duplication_line">Duplication line</string>
    <string name="jump_to_start">Jump to start</string>
    <string name="jump_to_end">Jump to end</string>
    <string name="goto_line">Go to line</string>
    <string name="document_info">Document Info</string>
    <string name="highlight_language">Highlight language</string>
    <string name="encoding">Encoding</string>
    <string name="read_only">Read only</string>
    <string name="file">File</string>
    <string name="other">Other</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="confirm_save">Confirm save</string>
    <string name="confirm_save_msg">Document %s has changed，do you want to save and exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cannt_access_file">Can not access file: %s</string>
    <string name="cannt_read_file">Can not read file: %s</string>
    <string name="ok">OK</string>
    <string name="read_file_exception">Occurs exception when read file</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="path_x">Path: %s</string>
    <string name="char_x">Chars: %d</string>
    <string name="word_x">Words: %d</string>
    <string name="line_number_x">Line number: %d</string>
    <string name="encoding_x">Encoding: %s</string>
    <string name="find_label">Find What:</string>
    <string name="replace_label">Replace With:</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="whole_words_only">Whole words only</string>
    <string name="regex">Regular expression</string>
    <string name="recursively">Recursively</string>
    <string name="cannot_be_empty">Can not be empty</string>
    <string name="find_not_found">Not found</string>
    <string name="previous_occurrence">Previous Occurrence</string>
    <string name="next_occurrence">Next Occurrence</string>
    <string name="replace_all">Replace All</string>
    <string name="select_lang_to_highlight">Select a language to highlight</string>
    <string name="more_menu">More menu</string>
    <string name="reopen_with_encoding">Reopen with encoding</string>
    <string name="document_changed">Document changed</string>
    <string name="give_up_document_changed_message">Document has changed, your changes will be lost if you don’t save them, confirm?</string>
    <string name="settings">Settings</string>
    <string name="editor">Editor</string>
    <string name="default_value">Default</string>
    <string name="font_size">Font Size</string>
    <string name="touch_to_adjust_text_size_title">Touch to change text size</string>
    <string name="touch_to_adjust_text_size_summary">Change font size (Zoom) with two finger</string>
    <string name="word_wrap_in_editor_title">Wordwrap</string>
    <string name="word_wrap_in_editor_summary">Use soft wrap in editor</string>
    <string name="auto_complete_title">Auto complete</string>
    <string name="auto_complete_summary">Show small popup to suggest code when you typing. It can be not supported current language</string>
    <string name="show_linenumber">Show Linenumber</string>
    <string name="show_whitespace">Show Whitespace</string>
    <string name="auto_indent">Auto Indent</string>
    <string name="insert_space_for_tab">Insert space for Tab</string>
    <string name="highlight_and_theme">Highlight and Theme</string>
    <string name="highlight_the_file_size_limit">Limit highlight file size</string>
    <string name="auto_save">Auto save file</string>
    <string name="remember_last_opened_files">Remember last opened files</string>
    <string name="remember_last_opened_files_summary">Auto open last opened files when startup</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="auto_capitalize_title">Auto capitalize</string>
    <string name="auto_capitalize_summary">Not recommend</string>
    <string name="enable_highlight">Enable highlight</string>
    <string name="file_not_exists">File not exists</string>
    <string name="cannt_handle_intent_x">Can not process intent: %s</string>
    <string name="handle_intent_x_error">An error occurred when process intent: %s</string>
    <string name="press_again_will_exit">Press again will exit</string>
    <string name="find_replace">Find/Replace</string>
    <string name="find_or_replace">Find/Replace…</string>
    <string name="convert_to_uppercase">Convert to uppercase</string>
    <string name="convert_to_lowercase">Convert to lowercase</string>
    <string name="duplication_text">Duplication text</string>
    <string name="tab_size">Tab size</string>
    <string name="keyword">Keyword</string>
    <string name="find_keyword_is_empty">Keyword can not be empty</string>
    <plurals name="x_text_replaced">
        <item quantity="zero">0 found</item>
        <item quantity="other">%d text replaced</item>
    </plurals>

    <string-array name="screen_orientation">
        <item>Auto</item>
        <item>Landscape</item>
        <item>Portrait</item>
    </string-array>
    <string name="exit">Exit</string>
    <string name="clear_history">Clear History</string>
    <string name="custom_symbol_list">Custom symbol list</string>
    <string name="volume_move_title">Volume move</string>
    <string name="volume_move_summary">Press volume up (+) to move cursor to right, press volume down (-) to move cursor to left</string>
    <string name="reset">Reset</string>
    <string name="fullscreen_mode">Full screen Mode</string>
    <string name="enable_fullscreen_mode_message">Restart the application will enable the full screen mode</string>
    <string name="disabled_fullscreen_mode_message">Restart the application will disable the full screen mode</string>
    <string name="out_of_memory_error">Out of application memory</string>
    <string name="find_log">Find Log</string>
    <string name="replace_log">Replace Log</string>
    <string name="use_regex_to_find_tip">Replace keyword support: \\r, \\n, \\t and capturing groups $0 ~ $9</string>
    <string name="editor_setting">Editor setting</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="path">Path</string>
    <string name="invalid_name">Invalid name</string>
    <string name="not_a_text_file">The file %s seem like is not a text file. Do you want to open it?</string>
    <string name="hide_symbol_panel">Hide symbol panel</string>

    <string name="select">Select</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="auto_pair">Auto pair</string>
    <string name="pref_desc_auto_pair">Auto add close bracket, e.g.  when you type { editor will be auto add }</string>
    <string name="select_file">Select file</string>
    <string name="action_editor_themes">Editor Themes</string>
    <string name="code_editor">Code Editor</string>
    <string name="smali_java">Smali to Java</string>
    <string name="search">Search</string>
    <string name="action_next_panel">Next</string>
    <string name="action_replace_panel">Replace</string>
    <string name="action_all_replace_panel">All</string>
    <string name="action_prev_panel">Prev</string>
    <string name="confirm_exit">Confirm of the exit</string>
    <string name="attention_title">Attention!</string>
    <string name="jadx_doesnt_support_on_this_prone">Unforunaely, Jadx is not supported on your device. The minimun version of the android should be 8 (Oreo)</string>
</resources>
